# datasino

./: .gitignore  Makefile.in  README.adoc  configure  configure.ac  opam.in
docker/: Dockerfile  Dockerfile.in
m4/: ocaml.m4
src/: datasino_cli.ml  datasino_config.ml  datasino_main.ml  datasino_tools.ml
